--- a/styule.css
+++ b/styule.css
@@ -160,7 +160,23 @@
     color: var(--text-main);
     background-color: var(--background-main);
   }
- 
+  
+  h1, h2, h3, h4 {
+    font-family: var(--ff-heading);
+    color: var(--text-high-contrast);
+  }
+
+  h1 {
+    font-size: var(--font-size-heading-lg);
+  }
+
+   a {
+    color: var(--text-high-contrast);
+   }
+   a:hover,
+   a:focus-visible {
+    color: var(--text-brand-light);
+   }
 }
 
 
