--- a/style.css
+++ b/style.css
@@ -179,6 +179,21 @@
    }
 }
 
+@layer layout {
+.wrapper {
+  max-width: 1130px;
+  margin-inline: auto;
+  padding-inline: 1rem;
+  border: 1px solid red;
+  /* this was due to using the figma max-width you wouldn't normally do this*/
+  box-sizing: content-box; 
+  &[data-width="wide"] {
+  max-width: 1330px;
+}
+}
+
+}
+
 @layer utilities {
   .visually-hidden {
     clip: rect(0 0 0 0);
