--- a/style.css
+++ b/style.css
@@ -180,15 +180,31 @@
 }
 
 @layer layout {
+  .section {
+    --padding: 3.75rem;
+    padding-block: var(--padding);
+
+    @media(width > 760px) {
+      --padding: 8rem;
+
+      &[data-padding="compact"] {
+        --padding: 4.5rem;
+      }
+    }
+  }
 .wrapper {
-  max-width: 1130px;
+  --wrapper-max-width: 1130px;
+  max-width: var(--wrapper-max-width);
   margin-inline: auto;
   padding-inline: 1rem;
   border: 1px solid red;
   /* this was due to using the figma max-width you wouldn't normally do this*/
-  box-sizing: content-box; 
+  box-sizing: content-box;
+  &[data-width="narrow"] {
+    --wrapper-max-width: 720px;
+  }  
   &[data-width="wide"] {
-  max-width: 1330px;
+  --wrapper-max-width: 1330px;
 }
 }
 
