--- a/style.css
+++ b/style.css
@@ -184,6 +184,19 @@
 }
 
 @layer layout {
+  .equal-columns {
+    display: grid;
+    gap: var(--equal-columns-gap, 1rem);
+
+    @media (width > 760px) {
+      grid-auto-flow: column;
+      grid-auto-columns: 1fr;
+    }
+    &[data-gap="large"] {
+      --equal-columns-gap: 2rem;
+    }
+  }
+
   .section {
     --padding: 3.75rem;
     padding-block: var(--padding);
