--- a/style.css
+++ b/style.css
@@ -187,6 +187,7 @@
   .equal-columns {
     display: grid;
     gap: var(--equal-columns-gap, 1rem);
+    align-items: var(--equal-columns-vertical-alignment, stretch);
 
     @media (width > 760px) {
       grid-auto-flow: column;
@@ -194,6 +195,9 @@
     }
     &[data-gap="large"] {
       --equal-columns-gap: 2rem;
+    }
+    &[data-alignment="centered"] {
+      --equal-columns-vertical-alignment: center;
     }
   }
 
