--- a/style.css
+++ b/style.css
@@ -184,6 +184,16 @@
 }
 
 @layer layout {
+  /* Seclects everything but the first element  */
+  .flow > * + * {
+    margin-top: var(--flow-spacer, 1em);
+  }
+
+  .grid-flow {
+    display: grid;
+    gap: var(--grid-flow-gap, 1rem);
+  }
+
   .equal-columns {
     display: grid;
     gap: var(--equal-columns-gap, 1rem);
