Updated the hero page

--- a/style.css
+++ b/style.css
@@ -260,6 +260,25 @@
       list-style-type: none;
     }
   }
+
+  .hero {
+    text-align: center;
+    font-size: var(--font-size-md);
+    color: var(--text-high-contrast);
+    background-image: url(/assets/hero.webp);
+    background-size: cover;
+    background-position: center;
+  }  
+
+  .hero__title {
+    font-size: var(--font-size-heading-lg);
+  }
+
+  span {
+    font-size: var(--font-size-heading-xl);
+    color: var(--text-brand);
+    display: block;
+  }
 }
 
 
