styled page cards

--- a/style.css
+++ b/style.css
@@ -279,6 +279,26 @@
     color: var(--text-brand);
     display: block;
   }
+
+  .card {
+    display: grid;
+    gap: var(--card-gap, 1rem);
+    padding: 1rem;
+    background-color: var(--background-light);
+    border-radius: var(--border-radius-3);
+
+    img {
+      border-radius: var(--border-radius-2);
+    }
+
+  }
+
+  .card__title {
+    font-size: var(--card-title-fs,
+     var(--font-size-heading-regular));
+    color: var(--card-title-color,
+     var(--text-brand));
+  }
 }
 
 
