--- a/style.css
+++ b/style.css
@@ -261,6 +261,29 @@
     }
   }
 
+  .site-footer {
+    text-align: center;
+    padding: 2rem 0;
+    display: grid;
+    gap: 2rem;
+    background-color: var(--background-dark);
+
+    a {
+      color: var(--text-main);
+    }
+
+    a:hover, a:focus-visible {
+      color: var(--text-brand-light);
+    }
+
+  }
+
+  .site-footer__title {
+    font-size: var(--font-size-lg);
+    font-family: var(--ff-heading);
+    font-weight: 700;
+  }
+
   .hero {
     text-align: center;
     font-size: var(--font-size-md);
@@ -295,10 +318,29 @@
 
   .card__title {
     font-size: var(--card-title-fs,
-     var(--font-size-heading-regular));
+     var(--font-size-heading-sm));
     color: var(--card-title-color,
      var(--text-brand));
   }
+
+  .button {
+    text-decoration: none;
+    cursor: pointer;
+    display: inline-flex;
+    padding: 0.5rem 1rem;
+    background-color: var(--background-accent-main);
+    font-family: var(--ff-heading);
+    font-weight: 700;
+    border-radius: var(--border-radius-2);
+    font-size: var(--font-size-md);
+  }
+
+  .button:hover, :focus-visible {
+    color: var(--text-high-contrast);
+    background-color: var(--background-extra-light);
+  }
+
+
 }
 
 
